# crewai-seo-agent

./: .cursorrules  .dockerignore  .gitignore  Dockerfile  EXPLANATION.md  Procfile  README copy.md  README.md  app.yaml  docker-compose.yml  pyproject.toml  report.md  requirements.txt
.do/: app.yaml
src/: api.py  crew.py  main.py  queue_system.py  report.md  service.py  test_queue.py  worker.py
src/.do/: deploy.sh
src/config/: agents.yaml  tasks.yaml
src/db/: database.py  schema.sql
src/tools/: BrowserlessScraper.py  LoadingTimeTracker.py  MobileTesting.py  OffPageSEOAnalyzer.py  ReferringDomainAnalyzer.py  SeleniumScraper.py  SubpageAnalyzer.py
src/utils/: payment_handler.py
